[package]
name = "git-step"
version = "0.1.1"
edition = "2021"
authors = ["Jordan Fisher <jdjfisher@outlook.com>"]
license = "MIT"
description = "A tool to step through git commits"
readme = "README.md"
homepage = "https://github.com/jdjfisher/git-step"
repository = "https://github.com/jdjfisher/git-step"
keywords = ["cli", "git", "commit"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
console = "0.15.5"
once_cell = "1.17.1"
regex = "1.8.2"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
rexpect = "0.5.0"
